--- a/README
+++ b/README
@@ -1,3 +1,10 @@
+**proof of concept**
+
+[-] convert JSON to Objective-C object
+	- support nested object mapping
+	- support mapping array with custom class, not support nested array mapping
+[] convert Objective-C object to JSON
+
 ###############
 json spec:
 ###############
